--- a/Browser/index.html
+++ b/Browser/index.html
@@ -48,7 +48,7 @@
             <h3 class="mb-5">
                 <em>Coming Soon On Movieflix</em>
             </h3>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="Movies/BlackWidow/BlackWidow.html">Watch Trailer
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="Movie/BlackWidow/BlackWidow.html">Watch Trailer
                 Now</a>
         </div>
         <div class="overlay"></div>
@@ -62,25 +62,25 @@
             <div class="row Movies">
                 <div class="col-lg-4 col-md-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/Venom2/Venom2.html"><img
+                        <div class="col-6"><a href="Movie/Venom2/Venom2.html"><img
                                     src="Images/UpcomingMoviesimages/Venom2.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/Morbius/Morbius.html"><img
+                        <div class="col-6"><a href="Movie/Morbius/Morbius.html"><img
                                     src="Images/UpcomingMoviesimages/Morbius.jpg"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/TheBatman/TheBatman.html"><img
+                        <div class="col-6"><a href="Movie/TheBatman/TheBatman.html"><img
                                     src="Images/UpcomingMoviesimages/TheBatman.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/WonderWoman1984/WonderWoman1984.html"><img
+                        <div class="col-6"><a href="Movie/WonderWoman1984/WonderWoman1984.html"><img
                                     src="Images/UpcomingMoviesimages/WonderWoman1984.jpg"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/PeterRabbit2TheRunaway/PeterRabbit2TheRunaway.html"><img
+                        <div class="col-6"><a href="Movie/PeterRabbit2TheRunaway/PeterRabbit2TheRunaway.html"><img
                                     src="Images/UpcomingMoviesimages/PeterRabbit2TheRunAway.jpg.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/JungleCruise/JungleCruise.html"><img
+                        <div class="col-6"><a href="Movie/JungleCruise/JungleCruise.html"><img
                                     src="Images/UpcomingMoviesimages/JungleCruise.png"></a></div>
                     </div>
                 </div>
@@ -97,34 +97,34 @@
             <div class="row Movies">
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/JohnWick3/JohnWick3.html"><img
+                        <div class="col-6"><a href="Movie/JohnWick3/JohnWick3.html"><img
                                     src="Images/TopRatedMoviesImages/JohnWick.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/Bahubali2/Bahubali2.html"><img
+                        <div class="col-6"><a href="Movie/Bahubali2/Bahubali2.html"><img
                                     src="Images/TopRatedMoviesImages/Bahubali2.jpg"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/Joker/joker.html"><img
+                        <div class="col-6"><a href="Movie/Joker/joker.html"><img
                                     src="Images/TopRatedMoviesImages/Joker.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/Deadpool2/Deadpool2.html"><img
+                        <div class="col-6"><a href="Movie/Deadpool2/Deadpool2.html"><img
                                     src="Images/TopRatedMoviesImages/Deadpool2.jpg"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/Incredibles2/Incredibles2.html"><img
+                        <div class="col-6"><a href="Movie/Incredibles2/Incredibles2.html"><img
                                     src="Images/TopRatedMoviesImages/Incredible2.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/AvengersEndGame/AvengersEndGame.html"><img
+                        <div class="col-6"><a href="Movie/AvengersEndGame/AvengersEndGame.html"><img
                                     src="Images/TopRatedMoviesImages/AvengersEndGame.jpg"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
                         <div class="col-6"><a
-                                href="Movies/SpiderManIntoTheSpiderVerse/SpiderManIntoTheSpiderVerse.html"><img
+                                href="Movie/SpiderManIntoTheSpiderVerse/SpiderManIntoTheSpiderVerse.html"><img
                                     src="Images/TopRatedMoviesImages/SpiderManIntoTheSpiderVerse.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/GuardiansoftheGalaxy/GuardiansoftheGalaxy.html"><img
+                        <div class="col-6"><a href="Movie/GuardiansoftheGalaxy/GuardiansoftheGalaxy.html"><img
                                     src="Images/TopRatedMoviesImages/GaurdiansoftheGalaxy.jpg"></a></div>
                     </div>
                 </div>
@@ -141,33 +141,33 @@
             <div class="row Movies">
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/AntMan2/AntMan2.html"><img
+                        <div class="col-6"><a href="Movie/AntMan2/AntMan2.html"><img
                                     src="Images/LatestMoviesImages/AntMan2.jfif"></a></div>
-                        <div class="col-6"><a href="Movies/SpiderManFarFromHome/SpiderManFarFromHome.html"><img
+                        <div class="col-6"><a href="Movie/SpiderManFarFromHome/SpiderManFarFromHome.html"><img
                                     src="Images/LatestMoviesImages/SpiderManFarFromHome.jpg"></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/AvengersInfinityWar/AvengersInfinityWar.html"><img
+                        <div class="col-6"><a href="Movie/AvengersInfinityWar/AvengersInfinityWar.html"><img
                                     src="Images/LatestMoviesImages/AvengersInfinityWar.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/WonderWoman/WonderWoman.html"><img
+                        <div class="col-6"><a href="Movie/WonderWoman/WonderWoman.html"><img
                                     src="Images/LatestMoviesImages/WonderWomen.jpg"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/BlackPanther/BlackPanther.html"><img
+                        <div class="col-6"><a href="Movie/BlackPanther/BlackPanther.html"><img
                                     src="Images/LatestMoviesImages/BlackPanther.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/Bloodshot/Bloodshot.html"><img
+                        <div class="col-6"><a href="Movie/Bloodshot/Bloodshot.html"><img
                                     src="Images/LatestMoviesImages/Bloodshoot.jpg"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/ProjectPower/ProjectPower.html"><img
+                        <div class="col-6"><a href="Movie/ProjectPower/ProjectPower.html"><img
                                     src="Images/LatestMoviesImages/ProjectPower.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/SonictheHedgehog/SonictheHedgehog.html"><img
+                        <div class="col-6"><a href="Movie/SonictheHedgehog/SonictheHedgehog.html"><img
                                     src="Images/LatestMoviesImages/SonictheHedgehog.jpg"></a></div>
                     </div>
                 </div>
@@ -184,49 +184,49 @@
             <div class="row Movies">
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/Aladdin/Aladdin.html"><img
+                        <div class="col-6"><a href="Movie/Aladdin/Aladdin.html"><img
                                     src="Images/EnglishMoviesImages/Aladdin.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/AntMan/AntMan.html"><img
+                        <div class="col-6"><a href="Movie/AntMan/AntMan.html"><img
                                     src="Images/EnglishMoviesImages/AntMan.jfif"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/ToyStory/ToyStory.html"><img
+                        <div class="col-6"><a href="Movie/ToyStory/ToyStory.html"><img
                                     src="Images/EnglishMoviesImages/ToyStory.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/TheDarkKnight/TheDarkKnight.html"><img
+                        <div class="col-6"><a href="Movie/TheDarkKnight/TheDarkKnight.html"><img
                                     src="Images/EnglishMoviesImages/TheDarkKnight.jpg"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/TheGodfatherPart2/TheGodfatherPart2.html"><img
+                        <div class="col-6"><a href="Movie/TheGodfatherPart2/TheGodfatherPart2.html"><img
                                     src="Images/EnglishMoviesImages/TheGodFather.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/Inception/Inception.html"><img
+                        <div class="col-6"><a href="Movie/Inception/Inception.html"><img
                                     src="Images/EnglishMoviesImages/Inception.jpg"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/AmzingSpiderMan2/AmzingSpiderMan2.html"><img
+                        <div class="col-6"><a href="Movie/AmzingSpiderMan2/AmzingSpiderMan2.html"><img
                                     src="Images/EnglishMoviesImages/AmazingSpiderMan2.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/Aquaman/Aquaman.html"><img
+                        <div class="col-6"><a href="Movie/Aquaman/Aquaman.html"><img
                                     src="Images/EnglishMoviesImages/AquaMan.jpg"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/CaptainMarvel/CaptainMarvel.html"><img
+                        <div class="col-6"><a href="Movie/CaptainMarvel/CaptainMarvel.html"><img
                                     src="Images/EnglishMoviesImages/CaptainMarvel.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/DoctorStrange/DoctorStrange.html"><img
+                        <div class="col-6"><a href="Movie/DoctorStrange/DoctorStrange.html"><img
                                     src="Images/EnglishMoviesImages/DoctorStrange.jpg"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/IntoTheWoods/IntoTheWoods.html"><img
+                        <div class="col-6"><a href="Movie/IntoTheWoods/IntoTheWoods.html"><img
                                     src="Images/EnglishMoviesImages/IntoTheWoods.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/Kin/Kin.html"><img
+                        <div class="col-6"><a href="Movie/Kin/Kin.html"><img
                                     src="Images/EnglishMoviesImages/Kin.jpg"></a></div>
                     </div>
                 </div>
@@ -253,33 +253,33 @@
             <div class="row Movies">
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/Shivaay/Shivaay.html"><img
+                        <div class="col-6"><a href="Movie/Shivaay/Shivaay.html"><img
                                     src="Images/HindiMoviesImages/Shivaay.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/Sooryavanshi/Sooryavanshi.html"><img
+                        <div class="col-6"><a href="Movie/Sooryavanshi/Sooryavanshi.html"><img
                                     src="Images/HindiMoviesImages/Sooryavanshi.jpg"></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/Padmaavat/Padmaavat.html"><img
+                        <div class="col-6"><a href="Movie/Padmaavat/Padmaavat.html"><img
                                     src="Images/HindiMoviesImages/Padmaavat.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/KabirSingh/KabirSingh.html"><img
+                        <div class="col-6"><a href="Movie/KabirSingh/KabirSingh.html"><img
                                     src="Images/HindiMoviesImages/KabirSingh.jpg"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/BhootPartOne/BhootPartOne.html"><img
+                        <div class="col-6"><a href="Movie/BhootPartOne/BhootPartOne.html"><img
                                     src="Images/HindiMoviesImages/BhootPartOne.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/Dhaakad/Dhaakad.html"><img
+                        <div class="col-6"><a href="Movie/Dhaakad/Dhaakad.html"><img
                                     src="Images/HindiMoviesImages/Dhaakad.png"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="row">
-                        <div class="col-6"><a href="Movies/Drive/Drive.html"><img
+                        <div class="col-6"><a href="Movie/Drive/Drive.html"><img
                                     src="Images/HindiMoviesImages/Drive.jpg"></a></div>
-                        <div class="col-6"><a href="Movies/Darbar/Darbar.html"><img
+                        <div class="col-6"><a href="Movie/Darbar/Darbar.html"><img
                                     src="Images/HindiMoviesImages/Darbar.jpg"></a></div>
                     </div>
                 </div>
